# src/swagger.yaml
@@ -115,6 +115,15 @@ paths:
       summary: 알림 목록 조회
       security:
         - bearerAuth: []
+      parameters:
+        - name: cursor
+          in: query
+          schema:
+            type: string
+        - name: limit
+          in: query
+          schema:
+            type: integer
       responses:
         "200":
           description: 조회 성공
